--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Lato:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/jpeg" href="logo.jpg">
   <link rel="stylesheet" href="style.css">
   <script src="quotes.js" defer></script>
   <script src="app.js" defer></script>
@@ -14,7 +15,9 @@
 <body>
   <div class="app-container">
     <header class="hero">
-      <div class="hero-crest" aria-hidden="true">DK</div>
+      <div class="hero-crest" aria-hidden="true">
+        <img src="logo.jpg" alt="" class="hero-portrait">
+      </div>
       <h1>DonaldKing</h1>
       <p class="hero-tagline">Commanding wisdom from the gilded throne.</p>
     </header>
