--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Lato:wght@400;500;700&display=swap" rel="stylesheet">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7988948551774419" crossorigin="anonymous"></script>
   <link rel="icon" type="image/jpeg" href="logo.jpg">
   <link rel="stylesheet" href="style.css">
   <script src="quotes.js" defer></script>
@@ -14,6 +15,9 @@
 </head>
 <body>
   <div class="app-container">
+    <div class="ad-slot top-ad">
+      <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100010" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    </div>
     <header class="hero">
       <div class="hero-crest" aria-hidden="true">
         <img src="logo.jpg" alt="" class="hero-portrait">
@@ -28,6 +32,17 @@
           <p id="quote-author" class="quote-author"></p>
           <button id="new-quote-btn" type="button">New Decree</button>
         </div>
+        <div class="ad-slot inline-ad">
+          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100021" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        </div>
+        <section class="news-section" aria-labelledby="news-heading">
+          <div class="news-header">
+            <h2 id="news-heading">King's Daily Brief</h2>
+            <button id="refresh-news-btn" type="button" aria-label="Refresh royal brief">Refresh</button>
+          </div>
+          <p id="news-status" class="news-status">Summoning today's decrees...</p>
+          <ul id="news-list" class="news-list"></ul>
+        </section>
       </section>
       <section id="chat-page" class="page-section hidden">
         <div id="chat-window" class="chat-window" role="log" aria-live="polite" aria-label="Conversation with the King"></div>
@@ -40,6 +55,9 @@
           <input id="chat-input" type="text" name="message" placeholder="Present your words to the King..." maxlength="500">
           <button type="submit" aria-label="Send message">Send &#128081;</button>
         </form>
+        <div class="ad-slot chat-ad">
+          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100032" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        </div>
       </section>
     </main>
   </div>
