--- a/index.html
+++ b/index.html
@@ -35,14 +35,6 @@
         <div class="ad-slot inline-ad">
           <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100021" data-ad-format="auto" data-full-width-responsive="true"></ins>
         </div>
-        <section class="news-section" aria-labelledby="news-heading">
-          <div class="news-header">
-            <h2 id="news-heading">King's Daily Brief</h2>
-            <button id="refresh-news-btn" type="button" aria-label="Refresh royal brief">Refresh</button>
-          </div>
-          <p id="news-status" class="news-status">Summoning today's decrees...</p>
-          <ul id="news-list" class="news-list"></ul>
-        </section>
       </section>
       <section id="chat-page" class="page-section hidden">
         <div id="chat-window" class="chat-window" role="log" aria-live="polite" aria-label="Conversation with the King"></div>
@@ -59,11 +51,25 @@
           <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100032" data-ad-format="auto" data-full-width-responsive="true"></ins>
         </div>
       </section>
+      <section id="news-page" class="page-section hidden" aria-labelledby="news-heading">
+        <div class="news-section">
+          <div class="news-header">
+            <h2 id="news-heading">King's Daily Brief</h2>
+            <button id="refresh-news-btn" type="button" aria-label="Refresh royal brief">Refresh</button>
+          </div>
+          <p id="news-status" class="news-status">Summoning today's decrees...</p>
+          <ul id="news-list" class="news-list"></ul>
+        </div>
+        <div class="ad-slot news-ad">
+          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100043" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        </div>
+      </section>
     </main>
   </div>
   <nav id="bottom-nav">
     <button id="nav-quote" type="button" class="active">Quote of the King</button>
     <button id="nav-chat" type="button">Talk with the King</button>
+    <button id="nav-news" type="button">King's Daily Brief</button>
   </nav>
 </body>
 </html>
