--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
         <div class="ad-slot news-ad">
           <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100043" data-ad-format="auto" data-full-width-responsive="true"></ins>
         </div>
+        <div class="ad-slot network-ad">
+          <div class="network-wrapper">
+            <script type="text/javascript">
+              atOptions = {
+                key: '45517be8074ddd52b05cd15a47c44b4d',
+                format: 'iframe',
+                height: 250,
+                width: 300,
+                params: {}
+              };
+            </script>
+            <script type="text/javascript" src="https://www.highperformanceformat.com/45517be8074ddd52b05cd15a47c44b4d/invoke.js"></script>
+          </div>
+        </div>
       </section>
     </main>
   </div>
