--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="app-container">
     <div class="ad-slot top-ad">
-      <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100010" data-ad-format="auto" data-full-width-responsive="true"></ins>
+  <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100010" data-ad-format="auto" data-full-width-responsive="true" data-adtest="on"></ins>
     </div>
     <header class="hero">
       <div class="hero-crest" aria-hidden="true">
@@ -33,7 +33,7 @@
           <button id="new-quote-btn" type="button">New Decree</button>
         </div>
         <div class="ad-slot inline-ad">
-          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100021" data-ad-format="auto" data-full-width-responsive="true"></ins>
+          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100021" data-ad-format="auto" data-full-width-responsive="true" data-adtest="on"></ins>
         </div>
       </section>
       <section id="chat-page" class="page-section hidden">
@@ -48,7 +48,7 @@
           <button type="submit" aria-label="Send message">Send &#128081;</button>
         </form>
         <div class="ad-slot chat-ad">
-          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100032" data-ad-format="auto" data-full-width-responsive="true"></ins>
+          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100032" data-ad-format="auto" data-full-width-responsive="true" data-adtest="on"></ins>
         </div>
       </section>
       <section id="news-page" class="page-section hidden" aria-labelledby="news-heading">
@@ -61,7 +61,7 @@
           <ul id="news-list" class="news-list"></ul>
         </div>
         <div class="ad-slot news-ad">
-          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100043" data-ad-format="auto" data-full-width-responsive="true"></ins>
+          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7988948551774419" data-ad-slot="7432100043" data-ad-format="auto" data-full-width-responsive="true" data-adtest="on"></ins>
         </div>
         <div class="ad-slot network-ad">
           <div class="network-wrapper">
